--- a/makefile.dev
+++ b/makefile.dev
@@ -20,8 +20,8 @@ beautify	: $(HDR)
 	done
 # static code analysis
 lint	: $(SRC)
-#	for FILE in $^; do \
-#		clang --analyze -ansi -I. $$FILE || exit 1; done;
+	for FILE in $^; do \
+		clang --analyze -ansi -I. $$FILE || exit 1; done;
 	for FILE in $^; do \
 		splint -ansi-lib -weak -fcnuse -varuse -I. $$FILE \
 		|| exit 1; done;
