reset the test suite, fix xstdint/glibc bug
The default language setting for gcc anf gcc-compatible compilers is
an hybrid between C89 and C99. It is not full C99, sot the C99 macro
detection fails, but int8_t and similar types are defined...
We resort to a glibc-specific detection, nothing else works. Too bad...

--- a/makefile.dev
+++ b/makefile.dev
@@ -36,6 +36,11 @@ lint	: $(SRC)
 	$(RM) *.plist
 	$(MAKE) -B CFLAGS="$(CFLAGS_STRICT)"
 
+# debug build
+debug	: $(SRC)
+	$(MAKE) CFLAGS="$(CFLAGS) -g" \
+		CPPFLAGS="$(CPPFLAGS) -UNDEBUG" LDFLAGS="$(LDFLAGS) -lefence"
+
 # code tests
 test    : $(SRC) $(HDR)
 	sh -e test/run.sh && echo SUCCESS || ( echo ERROR; return 1)
