--- a/makefile.dev
+++ b/makefile.dev
@@ -31,7 +31,7 @@ lint	: $(SRC)
 	for FILE in $^; do \
 		clang --analyze -ansi -I. $$FILE || exit 1; done;
 	for FILE in $^; do \
-		splint -ansi-lib -weak -fcnuse -varuse -I. $$FILE \
+		splint -ansi-lib -weak -I. $$FILE \
 		|| exit 1; done;
 	$(RM) *.plist
 	$(MAKE) -B CFLAGS="$(CFLAGS_STRICT)"
