--- a/makefile.dev
+++ b/makefile.dev
@@ -9,6 +9,9 @@
 DATE	= $(shell date -u +%Y%m%d)
 RELEASE_TAG   = 0.$(DATE)
 
+CFLAGS_STRICT	= $(CFLAGS) -ansi -pedantic -Wall -Wextra -Werror \
+	-Wno-unused-function
+
 .PHONY	: srcdoc lint beautify test release
 
 # source documentation
@@ -25,14 +28,12 @@ beautify	: $(SRC) $(HDR)
 	done
 
 # static code analysis and strict build
-CFLAGS_STRICT	= $(CFLAGS) -ansi -pedantic -Wall -Wextra -Werror \
-	-Wno-unused-function
 lint	: $(SRC)
 	for FILE in $^; do \
-		clang --analyze -ansi -I. $$FILE || exit 1; done;
-	for FILE in $^; do \
-		splint -ansi-lib -weak -I. $$FILE \
-		|| exit 1; done;
+		clang --analyze -ansi -I. $$FILE || exit 1; \
+		splint -ansi-lib -weak -I. $$FILE || exit 1; \
+		cppcheck --enable=style --error-exitcode=1 $$FILE || exit 1; \
+	done;
 	$(RM) *.plist
 	$(MAKE) -B CFLAGS="$(CFLAGS_STRICT)"
 
